# sleepmask-nrf

./: .gitignore  CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf  prj_minimal.conf
src/: main.c
src/data_svc/: CMakeLists.txt  data_svc.c  data_svc.h
src/max30102/: CMakeLists.txt  max30102.c  max30102.h
src/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
